# backend

./: pyproject.toml
alembic/: env.py
alembic/versions/: 0a1b2c3d4e5f_add_owner_company_and_terminal_to_lab_equipment.py  12589266de81_initial_schema.py  20260212_add_api_measure.py  20260212_add_cal_cert_no.py  20260212_add_samples.py  20260212_add_user_type_visitor.py  20260212_cert_no_not_null.py  20260212_drop_terminal_prefix.py  20260212_merge_heads.py  20260212_samp_an_hist.py  20260212_sample_details.py  20260212_sample_identifier.py  20260212_sample_nullable.py  20260212_sample_water.py  20260212_term_code_cons.py  20260212_terminal_code.py  20260212_terminal_code_required.py  20260212_terminal_prefix.py  20260213_add_percent_pv_measure.py  20260213_backfill_term_hist.py  20260213_emp_value_scale.py  20260213_equ_emp_fields.py  20260213_equ_term_hist.py  20260213_ext_an_rec.py  20260213_ext_analysis.py  20260213_ext_analysis_defaults.py  20260213_kf_calib_fields.py  20260216_add_rel_humidity.py  20260216_company_active.py  20260216_ext_an_company.py  20260216_sample_kf_equipment.py  20260216_sample_kf_factor.py  20260216_sample_water_balance.py  20260216_sample_water_unit.py  20260216_sample_water_volume.py  20260216_term_code_alnum.py  20260216_term_lab_is_lab.py  20260218_add_sample_thermohygrometer.py  20260218_drop_calib_company_name.py  20260227_idx_user_refresh_token_hash.py  (+44 more)
app/: main.py
app/api/: __init__.py
app/core/: config.py  lifespan.py  logging.py
app/db/: engine.py  events.py  session.py
app/models/: __init__.py  company.py  company_block.py  company_terminal.py  enums.py  equipment.py  equipment_calibration.py  equipment_history.py  equipment_inspection.py  equipment_measure_spec.py  equipment_reading.py  equipment_status_history.py  equipment_terminal_history.py  equipment_type.py  equipment_type_history.py  equipment_type_inspection_item.py  equipment_type_max_error.py  equipment_type_measure.py  equipment_type_role_history.py  equipment_type_verification.py  equipment_type_verification_item.py  equipment_verification.py  external_analysis_record.py  external_analysis_terminal.py  external_analysis_type.py  refs.py  sample.py  terminal_product_type.py  (+2 more)
tests/: conftest.py
(+79 files in other folders)
