[project]
name = "backend"
version = "0.1.0"
description = "Backend API - Laboratorio 2026"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "alembic>=1.18.1",
    "fastapi[standard]>=0.128.0",
    "pydantic-settings>=2.6.0",
    "psycopg2>=2.9.11",
    "supabase>=2.4.0",
    "sqlalchemy>=2.0.45",
    "sqlmodel>=0.0.31",
    "bcrypt>=4",
    "python-jose[cryptography]>=3.5.0",
    "argon2-cffi>=25.1.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.11",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

# -------------------------
# Ruff configuration
# -------------------------
[tool.ruff]
target-version = "py313"
line-length = 120
fix = true
# Carpetas/archivos a ignorar
exclude = [".venv", "__pycache__", "alembic", "migrations"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "I",     # isort (imports)
    "B",     # flake8-bugbear
    "UP",    # pyupgrade
    "ASYNC", # buenas prácticas async

]
ignore = [
    "B008", # FastAPI Depends(...) en parámetros

]

# Reglas por archivo (muy útil en FastAPI)
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

# Ruff formatter (reemplaza black)
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# -------------------------
# MyPy configuration
# -------------------------

[tool.mypy]
files = ["app"]

ignore_missing_imports = true
warn_unused_ignores = true
strict_optional = true
warn_return_any = true
warn_unreachable = true
pretty = true

# -------------------------
# Pytest configuration
# -------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    # pyiceberg (dependencia transitiva de supabase) usa APIs deprecadas de pydantic y pyparsing
    "ignore::DeprecationWarning:pyiceberg.*",
    "ignore:.*deprecated.*:UserWarning:pyiceberg.*",
]

[tool.pyright]
typeCheckingMode = "basic"
reportAssignmentType = "none"
